--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,51 +1,85 @@
 body {
-  font-size: 120%;
-  font-family: Arial;
+    font-size: 120%;
+    font-family: Arial;
 }
 
-button, input {
-  font-size: 100%;
-  font-family: Arial;
+button,
+input {
+    font-size: 100%;
+    font-family: Arial;
 }
 
 table {
-  width: 100%;
+    width: 100%;
 }
 
-td, th {
-  border: 1px solid #dddddd;
-  text-align: left;
-  padding: 8px;
+td,
+th {
+    border: 1px solid #dddddd;
+    text-align: left;
+    padding: 8px;
 }
 
 tr:nth-child(even) {
-  background-color: #dddddd;
+    background-color: #dddddd;
 }
 
 .error {
-  color: red;
+    color: red;
 }
 
 .wrapper {
-  margin: 0 auto;
-  max-width: 825px;
-  text-align: center;
+    margin: 0 auto;
+    max-width: 825px;
+    text-align: center;
 }
 
 .total {
-  font-size: 150%;
-  text-decoration: underline;
+    font-size: 150%;
+    text-decoration: underline;
 }
 
 .form {
-  margin-top: 25px;
-  width: 100%;
+    margin-top: 25px;
+    width: 100%;
 }
 
 .transactions {
-  text-align: left;
-  max-height: 300px;
-  overflow: auto;
-  width: 90%;
-  margin: 0 auto;
+    text-align: left;
+    max-height: 300px;
+    overflow: auto;
+    width: 90%;
+    margin: 0 auto;
+}
+
+
+/* Tooltip container */
+
+.tooltip {
+    position: relative;
+    display: inline-block;
+}
+
+
+/* Tooltip text */
+
+.tooltip .tooltiptext {
+    visibility: hidden;
+    width: 17rem;
+    background-color: rgb(219, 83, 83);
+    color: #fff;
+    text-align: center;
+    padding: .4rem;
+    border-radius: 6px;
+    /* Position the tooltip text - see examples below! */
+    position: absolute;
+    right: 1.5rem;
+    z-index: 1;
+}
+
+
+/* Show the tooltip text when you mouse over the tooltip container */
+
+.tooltip:hover .tooltiptext {
+    visibility: visible;
 }
