IndexedDB functions updated to allow for storage and subbmission of transaction DELETE requests

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -121,7 +121,7 @@ nav {
 
 .tooltip2 .tooltiptext2 {
     visibility: hidden;
-    width: 17rem;
+    width: 28vw;
     background-color: rgb(219, 83, 83);
     color: #fff;
     text-align: center;
