fixed zindex issue with logout/account links

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -14,7 +14,8 @@ body {
     background-color: var(--app-bg-color);
 }
 
-.navlink {
+.navlink,
+#logoutNav {
     position: relative;
     z-index: 999;
 }
